UPDATE CSS AND JS

--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
     <h1 class="title img">happy</h1>
     <img src="https://cdn.britannica.com/94/151894-050-F72A5317/Brown-eggs.jpg">
 </section>
-</header>   
+</header> 
+
+<footer class="col">
+    <button class="btn"></button>
+    <button class="btn"></button>
+    <button class="btn"></button>
+    <button class="btn"></button>
+    <footer class="col">
+        <button class="btn"></button>
+        <button class="btn"></button>
+        <button class="btn"></button>
+        <button class="btn"></button>
+        <div class="col">
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <footer class="col">
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+</footer>
 </body>
 </html>
