--- a/index.html
+++ b/index.html
@@ -25,26 +25,29 @@
 </section>
 </header> 
 
-<footer class="col">
-    <button class="btn"></button>
-    <button class="btn"></button>
-    <button class="btn"></button>
-    <button class="btn"></button>
-    <footer class="col">
-        <button class="btn"></button>
-        <button class="btn"></button>
-        <button class="btn"></button>
-        <button class="btn"></button>
+
+<footer>
+    <div class="col">
+        <button class="btn">a</button>
+        <button class="btn">a</button>
+        <button class="btn">a</button>
+        <button class="btn">a</button>
         <div class="col">
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <footer class="col">
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
+            <button class="btn">a</button>
+            <button class="btn">a</button>
+            <button class="btn">a</button>
+            <button class="btn">a</button>
+            <div class="col">
+                <button class="btn">a</button>
+                <button class="btn">a</button>
+                <button class="btn">a</button>
+                <button class="btn">a</button>
+                <div class="col">
+                    <button class="btn">a</button>
+                    <button class="btn">a</button>
+                    <button class="btn">a</button>
+                    <button class="btn">a</button>
+    </div>
 </footer>
 </body>
 </html>
